# bizlib

./: .gitignore  CMakeLists.txt  README.md  biz.cpp  biz.h  color_rect.h  libs.h  main.cpp  shader.h  texture.h
res/shaders/color_shader/: fragment_core.glsl  vertex_core.glsl
res/shaders/font_shader/: fragment_core.glsl  vertex_core.glsl
res/shaders/texture_shader/: fragment_core.glsl  vertex_core.glsl
src/: biz.h  color.h  color_rect.cpp  color_rect.h  font.cpp  font.h  libs.h  main.cpp  maths.h  shader.cpp  sound.cpp  sound.h  texture.cpp  texture.h  vertex.h  window.cpp  window.h
